docs: update environment variable documentation for Supabase service role key

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,10 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Supabase Service Role Key (KEEP SECRET - only for server-side admin operations)
+# Supabase Service Role Key (OPTIONAL - currently unused)
 # WARNING: This key bypasses Row Level Security - only use for admin operations
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+# Remove this if you're certain you'll never need admin database access
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # OpenRouter Configuration
 # Get your API key from: https://openrouter.ai/keys
