--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1"
