--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Extract LinkedIn profiles and get AI-powered personality insights with DISC analysis",
   "author": "PersonaFlow",
-  "homepage_url": "https://crystalknows-clone.vercel.app",
+  "homepage_url": "https://personaflow.vercel.app",
   "icons": {
     "16": "icons/icon-16.svg",
     "48": "icons/icon-48.svg",
@@ -19,7 +19,7 @@
     "https://www.linkedin.com/*",
     "http://localhost:3000/*",
     "http://localhost:3001/*",
-    "https://crystalknows-clone.vercel.app/*"
+    "https://personaflow.vercel.app/*"
   ],
   "content_scripts": [
     {
