feat: Implement three-tier AI personality analysis with fal.ai and OpenRouter fallback

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,14 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # Remove this if you're certain you'll never need admin database access
 # SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
-# OpenRouter Configuration
+# fal.ai Configuration (Primary AI Service)
+# Get your API key from: https://fal.ai/dashboard/keys
+FAL_KEY=your_fal_api_key_here
+FAL_MODEL=anthropic/claude-3-5-haiku
+
+# OpenRouter Configuration (Fallback AI Service - Optional)
 # Get your API key from: https://openrouter.ai/keys
+# Used as fallback if fal.ai is unavailable
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_MODEL=anthropic/claude-3.5-haiku
 
@@ -20,4 +26,5 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # - NEXT_PUBLIC_ variables are exposed to the browser (safe for anon key)
 # - Never commit real API keys to version control
 # - Service role key should only be used for admin operations server-side
-# - Keep OpenRouter API key secret as it incurs costs
+# - Keep FAL_KEY and OPENROUTER_API_KEY secret as they incur costs
+# - The system uses three-tier fallback: fal.ai → OpenRouter → basic keyword analysis
